# inkframe

./: .gitignore  CONTEXT.md  PRD.md  README.md  rewrite_messages.sh  rewrite_msgs.sh  theme.css  文档说明-剧本 YAML Schema.md
.agents/: DESIGN_GUIDE.md  DEVELOPMENT_RULES.md
backend/: pyproject.toml
backend/app/: main.py  storage.py
backend/app/api/: models.py  novels.py  projects.py
backend/app/llm/: __init__.py  anthropic_compat.py  base.py  mock.py  openai_compat.py  registry.py
backend/app/models/: __init__.py  character.py  errors.py  events.py  ids.py  novel.py  project.py  screenplay.py  status.py  text.py  validation.py
backend/app/pipeline/: __init__.py  progress.py  stage0.py  stage1.py  stage2.py  stage3.py
backend/tests/: conftest.py  test_bootstrap.py  test_create_project.py  test_export.py  test_novels.py  test_openai_provider.py  test_progress.py  test_rerun.py  test_schema_contract.py  test_stage0.py  test_stage1.py  test_stage2.py  test_validation.py
examples/: sample_novel_en.txt  sample_novel_zh.txt  sample_novel_zh2.txt  斗破苍穹_前100章.txt  斗破苍穹_前20章.txt  斗破苍穹_前50章.txt  斗破苍穹_前5章.txt  都市特种兵.txt
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: AddProviderModal.tsx  CreateNovelModal.tsx  MaskedInput.tsx  ModelCombobox.tsx  RelationshipGraph.tsx  SceneList.tsx  SceneTimeline.tsx
frontend/src/lib/: importFiles.ts
frontend/src/pages/: Home.tsx  NewProject.tsx  NovelDetail.tsx  ProjectDetail.tsx  Settings.tsx
