[project]
name = "inkframe"
version = "0.1.0"
description = "AI novel-to-screenplay converter"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "uvicorn>=0.30.0",
    "jieba>=0.42.1",
    "python-multipart>=0.0.6",
    "openai>=1.0",
    "anthropic>=0.30.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
